# libvault_rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: tests.yml
examples/: README.md  health.rs  key_value.rs  main.rs  sys.rs
examples/policies/: example.hcl
src/: lib.rs
src/auth/: mod.rs
src/auth/approle/: mod.rs  requests.rs  responses.rs  test_helpers.rs
src/auth/token/: requests.rs
src/client/: vault.rs
src/secrets/: mod.rs
src/secrets/key_value/: requests.rs  responses.rs  test_helpers.rs
src/sys/: mod.rs  requests.rs  responses.rs  test_helpers.rs
