[package]
name = "libvault_rs"
version = "0.0.4"
edition = "2021"
authors = ["Aaron Bedra <aaron@aaronbedra.com>"]
license = "MIT"
description = "A Rust library for Hashicorp Vault"
homepage = "https://github.com/abedra/libvault_rs"
documentation = "https://docs.rs/libvault_rs"
repository = "https://github.com/abedra/libvault_rs"
readme = "README.md"


[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1.20.1", features = ["full"] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.89"
futures = "0.3"
